@@ -1,6 +1,7 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
 
+07 Oct 2005 Display SIGP order number in addition to description - Roger Bowler
 06 Oct 2005 Store Facility List Extended (STFLE) - Roger Bowler
 06 Oct 2005 Implemented ETF2 enhancements, still having the flu - Bernard van der Helm
 06 Oct 2005 Implemented ETF3 and crypto while having the flu - Bernard van der Helm
